--- a/apps/http/package.json
+++ b/apps/http/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "npx esbuild src/index.ts --bundle --outfile=dist/index.js --platform=node --format=esm --packages=external --tsconfig=tsconfig.json",
     "start": "node dist/index.js",
-    "dev": "npm run build && npm run start"
+    "build:dev": "npm run build && npm run start",
+    "dev": "tsx watch src/index.ts --env-file=.env"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +21,13 @@
     "esbuild": "^0.27.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typescript": "^5.9.3",
     "zod": "^4.1.13"
+  },
+  "devDependencies": {
+    "tsx": "^4.19.1",
+    "@types/swagger-ui-express": "^4.1.8"
   }
 }
