--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,8 +14,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^5.21.1",
-    "prisma": "^5.21.1",
+    "@prisma/client": "^7.0.0",
+    "prisma": "^7.0.0",
+    "@prisma/adapter-pg": "^7.0.1",
+    "pg": "^8.13.1",
+    "@types/pg": "^8.6.6",
+    "dotenv": "^16.4.7",
     "typescript": "^5.6.3"
   }
 }
